# CExamples

./: README
BuildToolExamples/AutotoolsExample/: Makefile.am  README  configure.ac  main.c
BuildToolExamples/AutotoolsExample/scripts/: build.sh  cleanup.sh
BuildToolExamples/CMakeExample/: CMakeLists.txt  README.txt
CLIExamples/CLIExample1/: Makefile  Makefile.am  Makefile.in  README  README.txt  aclocal.m4  config.status  configure  configure.ac  libtool
CLIExamples/CLIExample1/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
CLIExamples/CLIExample1/lib/: .time_management_learning.c.swp  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  geany_run_script.sh  time_management_activity.c  time_management_cli.c  time_management_learning.c
CLIExamples/CLIExample1/lib/.deps/: time_management_activity.Po  time_management_learning.Po
CLIExamples/CLIExample1/scripts/: build.sh  cleanup.sh
CLIExamples/CLIExample1/src/: Makefile  Makefile.am  Makefile.in  main.c  time_management  time_management_lib.h
CLIExamples/CLIExample1/src/.deps/: main.Po
CLIExamples/CLIExample1/tests/: Makefile  Makefile.am  Makefile.in  check_time_management_lib.c  check_tm
CLIExamples/CLIExample1/tests/.deps/: check_tm-check_time_management_lib.Po
CLIExamples/CLIExample2/tests/: CMakeLists.txt  check_time_management_lib.c
MakeExample1/: README  example2.c
MakeExample2/: README  example  example.h
MakeExample4/: Makefile.am  cleanup.sh
MakeExample5/: Makefile  Makefile.in  README  cleanup.sh  config.status  configure  geany_run_script.sh
MakeExample5/autom4te.cache/: output.1  traces.0  traces.1
MakeExample5/src/: Makefile  Makefile.in  example
MakeExample6/: Makefile  Makefile.in  cleanup.sh  config.status  configure
MakeExample6/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
MakeExample6/src/: Makefile  Makefile.am  Makefile.in
MakeExample7/: configure.ac
MakeExample8/: README  aclocal.m4  configure.ac
MakeExample8/autom4te.cache/: output.0  traces.1
MakeExample8/lib/: Makefile.in
MakeExample8/src/: Makefile  example
TimeManagement/: Design.txt
TimeManagement/CLIExample2/: CMakeLists.txt
TimeManagement/CLIExample2/lib/: CMakeLists.txt
TimeManagement/CLIExample2/src/: main.c  time_management_lib.h
(+73 files in other folders)
